--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com</groupId>
 	<artifactId>sk-group-shared-implementation</artifactId>
-	<version>1.1</version>
+	<version>1.2</version>
 	<name>sk-group-shared-implementation</name>
 	<description>This Project contains shared implementation like Logging,
 		ExceptionHandling, etc</description>
@@ -50,6 +50,12 @@
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>3.1.1</version>
 		</dependency>
 	</dependencies>
 
